--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <!-- Footer -->
 <footer class="page-footer font-small unique-color-dark">
 
-  <div style="background-color: #8C0CB3;, color:white;">
+  <div style="background-color: #24262b; color:white;">
     <div class="container">
 
       <!-- Grid row-->
